QALI-188 Gradle plugin to create a scenario
Apply the QALIPSIS Gradle plugin in all the examples.

To be fixed as follow-up:
- module demo-microservice: The test class DemoMicroserviceIntegrationTest is failing in Netty stack
- module jakarta-ee-messaging: the containers are not all healthy on Github only
- module quickstart-http: failures on Github only
- module distributed-system: to finish on an AMD64 computer